# SubVortex

./: .dockerignore  .gitignore  CHANGELOG.md  Incentive.md  LICENSE  Makefile  OWNERS  README.md  VERSION  docker-compose.yml  firewall-scapy.json  firewall.json  ip_blocked.json  ips_blocked.txt  min_compute.yml  pyproject-miner.toml  pyproject-validator.toml  pyproject.toml  raw_localspec.json  requirements.txt  setup.py  test.py  validator-2.key  validator-5.key
deployer/: .env.template  pyproject.toml  requirements.txt
deployer/src/: config.py  main.py
miner/neuron/: Dockerfile  README.md  entrypoint.sh  env.template  pyproject.toml  requirements.txt
miner/neuron/deployment/process/: neuron_process_setup.sh  neuron_process_start.sh  neuron_process_teardown.sh
subvortex/: pyproject.toml
subvortex/core/: Dockerfile.builder  Makefile  __init__.py  checks.py  identity.py  protocol.py  pyproject.toml  querier.py  settings_utils.py  utils.py  version.py
subvortex/core/core_bittensor/: axon.py  dendrite.py  synapse.py  wallet.py
subvortex/core/core_bittensor/config/: config_utils.py
subvortex/core/core_bittensor/logging/: __init__.py  logging_settings.py
subvortex/core/core_bittensor/subtensor/: __init__.py  subtensor.py  subtensor_settings.py
subvortex/core/country/: country.py  country_constants.py  geolookup.py
subvortex/core/database/: database.py  database_utils.py
subvortex/core/file/: file_google_drive_monitor.py  file_local_monitor.py  file_monitor.py  file_provider.py
subvortex/core/firewall/: firewall_factory.py  firewall_linux_observer.py  firewall_linux_tool.py  firewall_model.py  firewall_monitor.py  firewall_observer.py  firewall_packet.py  firewall_request.py  firewall_utils.py
subvortex/core/firewall/storage/: firewall_file_storage.py
subvortex/core/metagraph/: checker.py  database.py  metagraph.py  metagraph_observer.py  metagraph_storage.py  models.py  querier.py  settings.py
subvortex/core/model/challenge/: __init__.py  challenge.py  model_challenge_210.py
subvortex/core/model/neuron/: __init__.py  model_neuron_210.py  model_neuron_211.py  neuron.py
subvortex/core/model/schedule/: model_schedule_210.py  schedule.py
subvortex/core/monitor/: monitor.py  monitor_constants.py
subvortex/core/scheduler/: constants.py  model.py  models.py  scheduler_cycle.py  scheduler_planner.py  settings.py  utils.py
subvortex/core/shared/: __init__.py  checks.py  ecc.py  encoder.py  file.py  mock.py  neuron.py  platform.py  queue.py  substrate.py  type.py  utils.py  version.py  weights.py
subvortex/core/sse/: sse_handler.py  sse_server.py  sse_thread.py
subvortex/core/tests/: conftest.py
subvortex/core/tests/src/: test_config_utils.py  test_metagraph.py  test_metagraph_database.py  test_metagraph_observer.py  test_metagraph_storage.py  test_neuron_model.py  test_scheduler_cycle.py  test_scheduler_planner.py  test_scheduler_utils.py  test_subtensor_settings.py  test_utils.py
subvortex/core/version/: github_controller.py  interpreter_controller.py
subvortex/miner/: Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  quick_start.sh  quick_stop.sh  version.py
subvortex/miner/core/: config.py  firewall.py  run.py  utils.py  version.py
subvortex/miner/metagraph/: Dockerfile  README.md  entrypoint.sh  env.template  manifest.json  metadata.json  pyproject.toml  requirements-dev.txt  requirements.txt
subvortex/miner/metagraph/scripts/: metagraph_checker.sh  metagraph_querier.sh  metagraph_setup.sh  metagraph_start.sh  metagraph_stop.sh  metagraph_teardown.sh
subvortex/miner/metagraph/src/: checker.py  main.py  querier.py  settings.py  storage.py
subvortex/miner/neuron/: Dockerfile  Makefile  README.md  entrypoint.sh  env.template  manifest.json  metadata.json  pyproject.toml  requirements.txt
subvortex/miner/neuron/scripts/: neuron_querier.sh  neuron_setup.sh  neuron_start.sh  neuron_stop.sh  neuron_teardown.sh
subvortex/miner/neuron/src/: config.py  database.py  firewall.py  main.py  neuron.py  querier.py  score.py  settings.py  utils.py
subvortex/miner/redis/: Dockerfile  README.md  env.template  manifest.json  metadata.json  pyproject.toml  requirements.txt  version.py
subvortex/miner/redis/migrations/: remove_dump.sh
subvortex/miner/redis/scripts/: redis_setup.sh  redis_start.sh  redis_stop.sh  redis_teardown.sh
subvortex/miner/scripts/: miner_quick_start.sh  miner_quick_stop.sh  quick_restart.sh  quick_start.sh  quick_stop.sh
subvortex/scripts/: machine.sh  tools.sh  utils.sh
subvortex/scripts/wss/: check_certificate.sh  install_certificate.sh  teardown_certificate.sh
subvortex/scripts/wss/prod/: default
subvortex/validator/: Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  quick_start.sh  quick_stop.sh  version.py
subvortex/validator/challenger/: Dockerfile  entrypoint.sh  env.template  manifest.json  pyproject.toml  requirements.txt
subvortex/validator/challenger/scripts/: challenger_setup.sh  challenger_start.sh  challenger_stop.sh  challenger_teardown.sh
subvortex/validator/challenger/src/: main.py
subvortex/validator/core/: bonding.py  challenge.py  checks.py  config.py  constants.py  database.py  forward.py  miner.py  models.py  redis_controller.py  score.py  security.py  selection.py  state.py  synapse.py  utils.py  version.py  weights.py
subvortex/validator/core/challenger/: challenge_executor.py  challenge_scorer.py  challenger.py  constants.py  database.py  (+6 more)
subvortex/validator/metagraph/: Dockerfile  README.md  env.template  manifest.json  metadata.json  pyproject.toml  requirements.txt
subvortex/validator/neuron/: Dockerfile  Makefile  README.md  entrypoint.sh  env.template  manifest.json  metadata.json  pyproject.toml  requirements-dev.txt  requirements.txt
subvortex/validator/redis/: Dockerfile  Makefile  README.md  entrypoint.sh  env.template  manifest.json  metadata.json  pyproject.toml  version.py
subvortex/validator/scripts/: quick_restart.sh  quick_start.sh  quick_stop.sh
validator/neuron/: pyproject.toml
(+650 files in other folders)
