[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subvortex-deployer"
version = "3.0.0"
description = "SubVortex Deployer"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["../../"]
include = ["deployer/src/*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
miner = "deployer.src.main:main"
