[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.1.0"
description = "Shared logic and tools for SubVortex components"
authors = [{ name = "Eclipse Vortex", email = "subvortex.bt@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

license = { text = "MIT" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
# include = ["core", "core.*"]
