[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "subvortex"
dynamic = ["version"]
description = "SubVortex Validator"
authors = [{ name = "Eclipse Vortex", email = "subvortex.bt@gmail.com" }]
readme = "README.md"

[tool.setuptools.dynamic]
version = { attr = "subvortex.validator.version.__version__" }

[project.license]
text = "MIT"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = [
    "deployment/**/*",
    "requirements.txt",
    "README.md",
    "pyproject.toml",
    "env.template",
    "version.py",
]
